<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.saqib</groupId>
  <artifactId>fxengine</artifactId>
  <version>0.0.1-SNAPSHOT</version>

  <name>fxengine</name>
  <!-- FIXME change it to the project's website -->
  <url>http://www.example.com</url>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <java.17.options>
		--add-opens=java.base/sun.nio.ch=ALL-UNNAMED
    </java.17.options>
  </properties>

  <dependencies>
    <dependency>
        <groupId>org.junit.jupiter</groupId>
        <artifactId>junit-jupiter-engine</artifactId>
        <version>5.9.1</version>
        <scope>test</scope>
    </dependency>

    <!-- JSON parsing -->
    <dependency>
        <groupId>org.json</groupId>
        <artifactId>json</artifactId>
        <version>20231013</version>
    </dependency>
    
	<dependency>
	    <groupId>io.aeron</groupId>
	    <artifactId>aeron-all</artifactId>
	    <version>1.43.0</version> <!-- Latest as of March 2025 -->
	</dependency>
  </dependencies>

  <build>
        <plugins>
			
			<plugin>
			  <artifactId>maven-clean-plugin</artifactId>
			  <version>3.1.0</version>
			</plugin>
			
			<!-- default lifecycle, jar packaging: see https://maven.apache.org/ref/current/maven-core/default-bindings.html#Plugin_bindings_for_jar_packaging -->
			<plugin>
			  <artifactId>maven-resources-plugin</artifactId>
			  <version>3.0.2</version>
			</plugin>
			
			<plugin>
			  <artifactId>maven-surefire-plugin</artifactId>
			  <version>2.22.1</version>
			</plugin>
			
			<plugin>
			  <artifactId>maven-jar-plugin</artifactId>
			  <version>3.0.2</version>
			</plugin>
			
			<plugin>
			  <artifactId>maven-install-plugin</artifactId>
			  <version>2.5.2</version>
			</plugin>
			
			<plugin>
			  <artifactId>maven-deploy-plugin</artifactId>
			  <version>2.8.2</version>
			</plugin>
			
			<!-- site lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#site_Lifecycle -->
			<plugin>
			  <artifactId>maven-site-plugin</artifactId>
			  <version>3.7.1</version>
			</plugin>
			
			<plugin>
			  <artifactId>maven-project-info-reports-plugin</artifactId>
			  <version>3.0.0</version>
			</plugin>
			
			<plugin>
			  <artifactId>maven-compiler-plugin</artifactId>
			  <version>3.8.0</version>
			   <configuration>
                    <source>17</source> <!-- Match your JDK -->
                    <target>17</target>
                </configuration>
			</plugin>
  			  <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>3.1.0</version>
                <executions>
                    <execution>
                        <id>warmup</id>
                        <goals>
                            <goal>exec</goal>
                        </goals>
                        <configuration>
                            <executable>java</executable>
                            <arguments>
                                <argument>--add-opens</argument>
                                <argument>java.base/sun.nio.ch=ALL-UNNAMED</argument>
                                <argument>-Xmn4g</argument>
                                <argument>-cp</argument>
                                <argument>${project.build.outputDirectory};${project.build.directory}/dependency/*</argument>
                                <argument>com.saqib.fxengine.LowLatencyMatchingEngine</argument>
                            </arguments>
                            <async>true</async> <!-- Backgrounds warmup -->
                        </configuration>
                    </execution>
                    <execution>
                        <id>test</id>
                        <goals>
                            <goal>exec</goal>
                        </goals>
                        <configuration>
                            <executable>java</executable>
                            <arguments>
                                <argument>--add-opens</argument>
                                <argument>java.base/sun.nio.ch=ALL-UNNAMED</argument>
                                <argument>-cp</argument>
                                <argument>${project.build.testOutputDirectory};${project.build.outputDirectory};${project.build.directory}/dependency/*</argument>
                                <argument>com.saqib.fxengine.LowLatencyMatchingEngineTest</argument>
                            </arguments>
                        </configuration>
                    </execution>
                </executions>
                <dependencies>
                    <dependency>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-dependency-plugin</artifactId>
                        <version>3.6.0</version>
                    </dependency>
                </dependencies>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>3.6.0</version>
                <executions>
                    <execution>
                        <id>copy-dependencies</id>
                        <phase>process-resources</phase>
                        <goals>
                            <goal>copy-dependencies</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${project.build.directory}/dependency</outputDirectory>
                            <includeScope>runtime</includeScope>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            
        </plugins>
  </build>
</project>
